# chat-for-deepruta

./: README.md
backend/: main.py  pyproject.toml
frontend/: package-lock.json  package.json  vite.config.ts
frontend/src/: App.vue  main.ts
frontend/src/components/: Chat.vue  ChatInput.vue  ChatMessages.vue  Sidebar.vue
frontend/src/stores/: chatStore.ts
