[project]
name = "solvingtaskwithai"
version = "0.1.0"
description = ""
authors = [
    {name = "arewsa",email = "arewsa5@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "mistralai>=1.8.1,<2.0.0",
    "python-dotenv>=1.0.1,<2.0.0",
    "fastapi[standard] (>=0.116.1,<0.117.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
